--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
     "dev": "nodemon src/server.js",
     "debug": "ndb node app",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "migrate": "postgrator --config postgrator-config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
-    "morgan": "^1.9.1"
+    "knex": "^0.17.3",
+    "morgan": "^1.9.1",
+    "pg": "^7.11.0",
+    "postgrator": "^3.10.2",
+    "postgrator-cli": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.0.0",
+    "mocha": "^6.1.4",
     "ndb": "^1.0.43",
     "nodemon": "^1.18.10",
     "supertest": "^3.4.2"
