--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hapi/joi": "^15.1.0",
     "cli": "^1.0.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.8.16",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
